# merry-go-round

./: .eslintrc  .gitignore  .snyk  CMakeLists.txt  LICENSE  README.md  binding.gyp  binding.template.gyp  package.json  tsconfig.build.json  tsconfig.json  tsconfig.test.json  tslint.json
native/: addon.cc  buffer-manager.cc  buffer-manager.hpp  debug.hpp  dictionary.hpp  encoder.cc  encoder.hpp  hello.cc  includes.hpp  music.cc  music.hpp  nbind.hpp  object.cc  object.hpp  preprocessors.hpp  releasable.hpp  utils.hpp
native/debug/: debug.cc  debug.hpp  memory-manager.cc  memory-manager.hpp
native/io/: file.cc  file.hpp  file.posix.cc  file.posix.hpp  file.win32.cc  file.win32.hpp
native/music/: internal.cc  internal.hpp  music.cc  music.hpp
native/music/internal/: id3v2.cc  id3v2.constant.cc  internal.cc  internal.hpp  mpeg.cc  mpeg.hpp
native/node/: array.cc  array.hpp  base.cc  base.hpp  buffer.hpp  object.cc  object.hpp  string.cc  string.hpp
native/utils/: buffer-manager.cc  buffer-manager.hpp  encoder.cc  encoder.hpp  encoder.posix.cc  encoder.win32.cc  object-collector.hpp  string-manager.cc  string-manager.hpp  utils.hpp
src/: index.js  index.ts  lib-types.d.ts  types.ts
test/: Greeter.spec.ts  ID3v2.spec.ts  Music.spec.ts
test/samples/: RushJet1 - Forgotten Music - 02 - Ancient Ruin Adventure.comments.json  Witness-06-Farewell.private.json  auphonic_chapters_demo.chapters.json  id3v2.popm.json  id3v2.rva2.json  id3v2.sylt.json
test/samples/__snapshot__/: Witness-06-Farewell.__snapshot__.json  id3v2.etco.__snapshot__.json  id3v2.owne.__snapshot__.json  id3v2.rva2.__snapshot__.json
tools/: build.js
tools/install-deps/: download.ts  extract.ts  index.ts  install.ts  manifest.ts  utils.ts
tools/list-sources/: index.ts
